@@ -8,5 +8,6 @@ strip bppSuite/bppconsense
 strip bppSuite/bppseqman
 strip bppSuite/bppphysamp
 strip bppSuite/bppreroot
-tar cvzf bppSuite-linux32-bin-static-0.2.3.tar.gz bppSuite/bppdist bppSuite/bpppars bppSuite/bppml bppSuite/bppseqgen bppSuite/bppconsense bppSuite/bppseqman bppSuite/bppphysamp bppSuite/bppreroot
+strip bppSuite/bppancestor
+tar cvzf bppSuite-linux64-bin-static-0.3.0.tar.gz bppSuite/bppdist bppSuite/bpppars bppSuite/bppml bppSuite/bppseqgen bppSuite/bppconsense bppSuite/bppseqman bppSuite/bppphysamp bppSuite/bppreroot bppSuite/bppancestor
 
