@@ -1,3 +1,6 @@
+09/10/08 Julien Dutheil
+* New action 'invert' in bppSeqMan.
+
 25/09/08 -*- Version 0.3.0 -*-
 
 20/09/08 Julien Dutheil
